--- a/Adv_Pandas.ipynb
+++ b/Adv_Pandas.ipynb
@@ -6,7 +6,7 @@
       "name": "Adv Pandas.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNQF2MZfQAgQGx+nw2YfANT",
+      "authorship_tag": "ABX9TyO1LS+Z9RvljuBZccmelJEq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,10 +44,10 @@
         "outputId": "4830028e-92de-44aa-f60f-2392251d4baf"
       },
       "source": [
-        "import pandas as pd\r\n",
-        "import numpy as np\r\n",
-        "\r\n",
-        "from google.colab import drive\r\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "\n",
+        "from google.colab import drive\n",
         "drive.mount('/content/gdrive') "
       ],
       "execution_count": null,
@@ -76,10 +76,10 @@
         "id": "mBBdTK16eiN5"
       },
       "source": [
-        "path_1 = 'gdrive/My Drive/Colab Notebooks//Digital Skola/order_details.csv' # urutan sesuai data disimpan pada grdive\r\n",
-        "path_2 = 'gdrive/My Drive/Colab Notebooks//Digital Skola/order_lists.csv' # urutan sesuai data disimpan pada grdive\r\n",
-        "\r\n",
-        "details = pd.read_csv(path_1)\r\n",
+        "path_1 = 'gdrive/My Drive/Colab Notebooks//Digital Skola/order_details.csv' # urutan sesuai data disimpan pada grdive\n",
+        "path_2 = 'gdrive/My Drive/Colab Notebooks//Digital Skola/order_lists.csv' # urutan sesuai data disimpan pada grdive\n",
+        "\n",
+        "details = pd.read_csv(path_1)\n",
         "lists = pd.read_csv(path_2) "
       ],
       "execution_count": null,
@@ -388,7 +388,7 @@
         "outputId": "45502461-8a57-44cb-b1fd-14610feac289"
       },
       "source": [
-        "# pendekatan merge\r\n",
+        "# pendekatan merge\n",
         "pd.merge(details, lists, how='right', left_on='order_id', right_on='order_id').head()"
       ],
       "execution_count": null,
@@ -580,8 +580,8 @@
         "outputId": "86301d96-88de-4454-f6b2-8c6c070ff68a"
       },
       "source": [
-        "# pendekatan dengan model\r\n",
-        "dataset = pd.merge(details, lists, how='right', left_on='order_id', right_on='order_id').head()\r\n",
+        "# pendekatan dengan model\n",
+        "dataset = pd.merge(details, lists, how='right', left_on='order_id', right_on='order_id').head()\n",
         "dataset"
       ],
       "execution_count": null,
@@ -773,8 +773,8 @@
         "outputId": "7b6b9549-c63e-4d11-fad5-6dd7dcdb2ef4"
       },
       "source": [
-        "# caralain dengan variable\r\n",
-        "dataset = details.merge(lists, how='right', on='order_id').head()\r\n",
+        "# caralain dengan variable\n",
+        "dataset = details.merge(lists, how='right', on='order_id').head()\n",
         "dataset"
       ],
       "execution_count": null,
@@ -961,7 +961,7 @@
         "id": "qTredz6Vj9pe"
       },
       "source": [
-        "# untuk menghemat memori bisa menghapus variabel yang tidak digunakan\r\n",
+        "# untuk menghemat memori bisa menghapus variabel yang tidak digunakan\n",
         "# del details, list"
       ],
       "execution_count": null,
@@ -978,10 +978,10 @@
         "outputId": "727fc11a-fd48-4037-d946-8a7bd6909231"
       },
       "source": [
-        "# cara hapus kolom\r\n",
-        "# axis secara default axis 0 = row axis 1 = kolom\r\n",
-        "dataset.drop(['Total_Cost', 'Total_profit'], axis=1, inplace=True)\r\n",
-        "dataset.head()\r\n"
+        "# cara hapus kolom\n",
+        "# axis secara default axis 0 = row axis 1 = kolom\n",
+        "dataset.drop(['Total_Cost', 'Total_profit'], axis=1, inplace=True)\n",
+        "dataset.head()\n"
       ],
       "execution_count": null,
       "outputs": [
@@ -1155,7 +1155,7 @@
         "id": "-4JdAyHcpvxd"
       },
       "source": [
-        "# metode join harus punya index\r\n",
+        "# metode join harus punya index\n",
         "# details.join(lists.sets_index('order_id'), how='right', on='order_id').head()"
       ],
       "execution_count": null,
@@ -1167,7 +1167,7 @@
         "id": "Ek1fkUPwkJA_"
       },
       "source": [
-        "### CROSS JOIN\r\n",
+        "### CROSS JOIN\n",
         "dipakai untuk dataset mirip dengan json, didalam objek ada objek lagi"
       ]
     },
@@ -1177,13 +1177,13 @@
         "id": "IaBrs1aGilHw"
       },
       "source": [
-        "# Define a dictionary containing user ID\r\n",
-        "dict1 = {'Name': ['Rebecca', 'Maryam', 'Anita'], 'UserID': [1, 2, 3]}\r\n",
-        "\r\n",
-        "# Define\r\n",
-        "dict2 = {'ProductID': ['P1', 'P2', 'P3', 'P4']}\r\n",
-        "\r\n",
-        "df = pd.DataFrame(dict1)\r\n",
+        "# Define a dictionary containing user ID\n",
+        "dict1 = {'Name': ['Rebecca', 'Maryam', 'Anita'], 'UserID': [1, 2, 3]}\n",
+        "\n",
+        "# Define\n",
+        "dict2 = {'ProductID': ['P1', 'P2', 'P3', 'P4']}\n",
+        "\n",
+        "df = pd.DataFrame(dict1)\n",
         "df1 = pd.DataFrame(dict2)"
       ],
       "execution_count": null,
@@ -1195,7 +1195,7 @@
         "id": "sxp1_j6xlj1h"
       },
       "source": [
-        "df['key'] = 1\r\n",
+        "df['key'] = 1\n",
         "df1['key'] = 1"
       ],
       "execution_count": null,
@@ -1286,7 +1286,7 @@
         "id": "B52rX7C-mfXG"
       },
       "source": [
-        "cross = pd.merge(df, df1, on ='key').drop('key', 1)\r\n",
+        "cross = pd.merge(df, df1, on ='key').drop('key', 1)\n",
         "# cross cukup pakai on berdasarkan apa, kasus disini mengunakan 'key' yang sejenis"
       ],
       "execution_count": null,
@@ -1440,9 +1440,9 @@
         "id": "F-50hsNKq-IV"
       },
       "source": [
-        "### Concatenate DataFrames\r\n",
-        "\r\n",
-        " menempelkan tabel berdasarkan tanpa key\r\n"
+        "### Concatenate DataFrames\n",
+        "\n",
+        " menempelkan tabel berdasarkan tanpa key\n"
       ]
     },
     {
